# resume-twin

./: .env.example  .gitignore  QUICK_START.md  README.md  README_APP.md  SECURITY_UPDATE.md  docker-compose.yml  package-lock.json  package.json
.github/workflows/: ci.yml
backend/: .env.example  .env.render.example  Dockerfile  Dockerfile.render  RENDER_DEPLOY.md  pyproject.toml  render.yaml  requirements-render.txt  requirements.txt  start.sh
backend/app/: __init__.py  main.py
backend/app/api/: __init__.py
backend/app/api/v1/: api.py
backend/app/api/v1/endpoints/: __init__.py  ai.py  auth.py  education.py  experience.py  files.py  health.py  pdfs.py  profiles.py  projects.py  resume.py  templates.py
backend/app/core/: __init__.py  config.py  database.py  exceptions.py
backend/app/models/: __init__.py  experience.py  files.py  projects.py  resume.py  user.py
backend/app/services/: __init__.py  ai_service.py  base.py  cloud_pdf_service.py  file_service.py  github_service.py  html_to_pdf_service.py  latex_service.py  overleaf_service.py  pdf_generator_factory.py  pdf_service.py  pdf_storage_service.py  profile_service.py  project_service.py  resume_scorer_service.py  resume_service.py  s3_service.py  supabase_service.py  template_service.py
backend/app/utils/: __init__.py  logger.py
backend/tests/integration/: test_ai_optimization.py  test_profile_workflow.py
backend/tests/services/: test_ai_service.py
database/: schema.sql
database/migrations/: 001_add_generated_pdfs_table.sql
docs/: PDF_GENERATION_QUICK_REFERENCE.md  PDF_GENERATION_README.md  api-documentation.md  database-architecture.md  deployment-guide.md  design.md  features-and-apis.md  implementation_workflow.md  latex-deployment-guide.md  latex-implementation-summary.md  pdf-generation-implementation-summary.md  pdf-generation-methods-guide.md  schema-reference.md  supabase-setup-guide.md  system-flowcharts.md  system_analysis.md  task.md
frontend/: .env.example  .env.vercel.example  index.html  package.json  vercel.json  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/components/: ProtectedRoute.tsx
frontend/src/contexts/: AuthContext.tsx
frontend/src/data/: projectTemplates.ts
frontend/src/pages/: DashboardPage.tsx  LandingPage.tsx  LoginPage.tsx  RegisterPage.tsx
frontend/src/pages/Auth/: LoginPage.tsx  RegisterPage.tsx
frontend/src/pages/Profile/: ProfileEditorPage.tsx
frontend/src/pages/Projects/: ProjectsManagerPage.tsx
frontend/src/pages/Resume/: ResumeBuilderPage.tsx
scripts/: setup-dev.ps1  setup-dev.sh
templates/html/: creative_resume.html  developer_resume.html  minimal_resume.html  modern_resume.html  professional_resume.html
templates/latex/: classic_resume.tex  modern_resume.tex  professional_resume.tex
tests/: __init__.py  conftest.py  pytest.ini  run_tests.py  test_ai_service.py  test_file_service.py  test_github_service.py  test_profile_service.py  test_project_service.py  test_resume_scorer_service.py  test_resume_service.py  test_s3_service.py  test_template_service.py
